--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
