--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.ts"
+    "start": "nodemon server.ts",
+    "start:prod": "pm2 start --name coder-square server.ts --interpreter ts-node -- --transpile-only"
   },
   "keywords": [],
   "author": "",
